# Scientific_Computing

./: .gitignore  git_pull.sh  git_push.sh  task02.md
Julia/Task01_Followup/: output.txt  task01_followup.jl
Julia/Task02/: Task02.py  task02_12.jl  task02_3.jl
Julia/Task03/: config.txt  task03_1.jl  task03_2.jl
g++/Task01_Followup/: task01_followup  task01_followup.cpp
g++/Task02/: Makefile  task02_12  task02_12.cpp  task02_3  task02_3.cpp
g++/Task03/: Makefile  config.txt  config_hdf5.txt  readme.md  task03_1  task03_1.cpp  task03_1_hdf5_gsl  task03_1_hdf5_gsl.cpp  task03_2  task03_2.cpp  task03_2_hdf5_gsl  task03_2_hdf5_gsl.cpp  vector_N10.h5  vector_N10_d.h5  vector_N10_x.h5  vector_N10_y.h5
g++/Task04/: Answers.md  Makefile  config.txt  integral_value.txt  plotter.py  task04  task04.cpp  task04_answer4.jl  task04_for_loop  task04_for_loop.cpp
g++/Task05/: Answers.md  Checker.py  Makefile  config.txt  task05_a  task05_a.cpp  task05_b  task05_b.cpp  task05_b_xygenerator  task05_b_xygenerator.cpp
g++/Task06/: Answers.md  Makefile  task06  task06.cpp
g++/Task07/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.txt  main.cpp  task07  task07.cpp  task07_xygenerator  task07_xygenerator.cpp  test_task07  test_task07.cpp  test_task07_xygenerator  test_task07_xygenerator.cpp
g++/Task07/deleted/: CMakeCache.txt  Makefile
g++/Task08/: Makefile  config.txt  readme.md  task08  task08.cpp  task08_xygenerator
g++/Task09_MPI/: IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE_ANALYSIS.md  (+8 more)
task01/: Almalinux9_Docker_viaUbuntu2204.md
(+13 files in other folders)
